app1svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app1
