app2svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app2svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app2
