svc-traefik.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: traefik-system
  creationTimestamp: "2022-07-16T20:17:30Z"
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.24.0
  name: traefik
  namespace: traefik-system
  resourceVersion: "2769"
  uid: 1a2cdd29-6ee0-4ca8-a416-b97eba7d9c8c
spec:
  ports:
  - name: web
    nodePort: 30064
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 30985
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: NodePort
