ingressrouter2.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute2
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`146.190.13.101`) && Headers(`ApiCode`, `002`)
    kind: Rule
    services:
      - name: app2svc
        port: 80
